Fix deprecation warning: use URI.create() instead of deprecated URL constructor